CRM Gain: $ 4.97 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4
CRM Gain: $ -4.69 Win %: 37.00 in 8 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_TR_QP_DB10
CRM Gain: $ -1.13 Win %: 75.00 in 8 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_RV_TR_DB10
CRM Gain: $ 7.2 Win %: 75.00 in 8 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_RV_AV_DB10
CRM Gain: $ -0.02 Win %: 37.00 in 8 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_RV_AL_DB10
CRM Gain: $ 2.31 Win %: 75.00 in 8 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_RV_QP_DB10
CRM Gain: $ -2.97 Win %: 62.00 in 8 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_HM_TR_DB10
CRM Gain: $ 3.34 Win %: 62.00 in 8 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_HM_AV_DB10
CRM Gain: $ -1.39 Win %: 62.00 in 8 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_HM_QP_DB10
CRM Gain: $ 7.22 Win %: 87.00 in 8 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_IT_QL_DB10
CRM Gain: $ 2.15 Win %: 75.00 in 8 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_IT_QP_DB10
CRM Gain: $ -5.75 Win %: 37.00 in 8 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_TR_IR3
CRM Gain: $ -6.11 Win %: 37.00 in 8 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_TR_QP
CRM Gain: $ -12.99 Win %: 12.00 in 8 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_QP_IR3
CRM Gain: $ -1.72 Win %: 62.00 in 8 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_RV_TR
CRM Gain: $ 4.09 Win %: 75.00 in 8 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_RV_AV
CRM Gain: $ -2.09 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_RV_AL
CRM Gain: $ 1.74 Win %: 62.00 in 8 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_RV_QP
CRM Gain: $ -4.57 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_HM_TR
CRM Gain: $ -7.35 Win %: 37.00 in 8 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_HM_AV
CRM Gain: $ -3.22 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_HM_QP
CRM Gain: $ 7.48 Win %: 87.00 in 8 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_IT_QL
CRM Gain: $ 2.68 Win %: 87.00 in 8 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_IT_QP
CRM Gain: $ 4.97 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_AO_AC
CRM Gain: $ 7.07 Win %: 75.00 in 8 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_RV
CRM Gain: $ -9.97 Win %: 25.00 in 8 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_IR3
CRM Gain: $ -2.35 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_TR
CRM Gain: $ -4.47 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_AV
CRM Gain: $ -4.64 Win %: 37.00 in 8 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_AL
CRM Gain: $ 1.96 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_VI
CRM Gain: $ -1.25 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_LI
CRM Gain: $ -0.63 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_QP
CRM Gain: $ 2.24 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_HM
CRM Gain: $ 6.57 Win %: 62.00 in 8 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_SS
CRM Gain: $ 4.97 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_QL
CRM Gain: $ 5.4 Win %: 62.00 in 8 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_DB10
CRM Gain: $ 4.97 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_AO
CRM Gain: $ 4.97 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_AC
CRM Gain: $ 7.48 Win %: 87.00 in 8 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_IT
CRM Gain: $ -10.61 Win %: 37.00 in 8 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_TR_QP_DB10
CRM Gain: $ -5.79 Win %: 37.00 in 8 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_RV_TR_DB10
CRM Gain: $ 1.43 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_RV_AV_DB10
CRM Gain: $ -5.67 Win %: 37.00 in 8 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_RV_AL_DB10
CRM Gain: $ -1.75 Win %: 25.00 in 8 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_RV_QP_DB10
CRM Gain: $ -8.57 Win %: 25.00 in 8 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_HM_TR_DB10
CRM Gain: $ -0.6 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_HM_AV_DB10
CRM Gain: $ -6.18 Win %: 25.00 in 8 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_HM_QP_DB10
CRM Gain: $ 1.49 Win %: 87.00 in 8 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_IT_QL_DB10
CRM Gain: $ -0.77 Win %: 75.00 in 8 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_IT_QP_DB10
CRM Gain: $ -8.42 Win %: 25.00 in 8 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_TR_IR3
CRM Gain: $ -9.14 Win %: 12.00 in 8 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_TR_QP
CRM Gain: $ -17.14 Win %: 0 in 8 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_QP_IR3
CRM Gain: $ -2.38 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_RV_TR
CRM Gain: $ 4.33 Win %: 62.00 in 8 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_RV_AV
CRM Gain: $ -2.1 Win %: 37.00 in 8 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_RV_AL
CRM Gain: $ 0.7 Win %: 37.00 in 8 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_RV_QP
CRM Gain: $ -5.97 Win %: 37.00 in 8 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_HM_TR
CRM Gain: $ -7.87 Win %: 37.00 in 8 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_HM_AV
CRM Gain: $ -4.63 Win %: 37.00 in 8 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_HM_QP
CRM Gain: $ 4.23 Win %: 87.00 in 8 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_IT_QL
CRM Gain: $ 3.78 Win %: 100.00 in 8 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_IT_QP
CRM Gain: $ 3.76 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_AO_AC
CRM Gain: $ 7.09 Win %: 75.00 in 8 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_RV
CRM Gain: $ -15.37 Win %: 12.00 in 8 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_IR3
CRM Gain: $ -3.82 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_TR
CRM Gain: $ -5.4 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_AV
CRM Gain: $ -2.79 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_AL
CRM Gain: $ 1 Win %: 75.00 in 8 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_VI
CRM Gain: $ -1.43 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_LI
CRM Gain: $ -2.68 Win %: 37.00 in 8 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_QP
CRM Gain: $ 2.48 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_HM
CRM Gain: $ 2.92 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_SS
CRM Gain: $ 2.22 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_QL
CRM Gain: $ 0.65 Win %: 62.00 in 8 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_DB10
CRM Gain: $ 3.76 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_AO
CRM Gain: $ 3.76 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_AC
CRM Gain: $ 5.77 Win %: 87.00 in 8 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_IT
CRM Gain: $ -7.25 Win %: 25.00 in 8 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_TR_QP_DB10
CRM Gain: $ -3.68 Win %: 62.00 in 8 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_RV_TR_DB10
CRM Gain: $ 3.6 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_RV_AV_DB10
CRM Gain: $ -3.32 Win %: 37.00 in 8 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_RV_AL_DB10
CRM Gain: $ -3.7 Win %: 25.00 in 8 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_RV_QP_DB10
CRM Gain: $ -5.8 Win %: 62.00 in 8 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_HM_TR_DB10
CRM Gain: $ 0.74 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_HM_AV_DB10
CRM Gain: $ -5.92 Win %: 25.00 in 8 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_HM_QP_DB10
CRM Gain: $ 4.16 Win %: 87.00 in 8 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_IT_QL_DB10
CRM Gain: $ 0.03 Win %: 87.00 in 8 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_IT_QP_DB10
CRM Gain: $ -7.88 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_TR_IR3
CRM Gain: $ -8.22 Win %: 25.00 in 8 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_TR_QP
CRM Gain: $ -9.23 Win %: 37.00 in 8 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_QP_IR3
CRM Gain: $ -3.62 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_RV_TR
CRM Gain: $ 3.99 Win %: 62.00 in 8 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_RV_AV
CRM Gain: $ -1.89 Win %: 37.00 in 8 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_RV_AL
CRM Gain: $ -0.86 Win %: 25.00 in 8 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_RV_QP
CRM Gain: $ -6.41 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_HM_TR
CRM Gain: $ -9.86 Win %: 37.00 in 8 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_HM_AV
CRM Gain: $ -5.93 Win %: 12.00 in 8 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_HM_QP
CRM Gain: $ 4.13 Win %: 87.00 in 8 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_IT_QL
CRM Gain: $ 3.57 Win %: 100.00 in 8 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_IT_QP
CRM Gain: $ 2.77 Win %: 62.00 in 8 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_AO_AC
CRM Gain: $ 7.12 Win %: 75.00 in 8 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_RV
CRM Gain: $ -12.66 Win %: 25.00 in 8 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_IR3
CRM Gain: $ -4.81 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_TR
CRM Gain: $ -6.22 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_AV
CRM Gain: $ -3.02 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_AL
CRM Gain: $ -1.25 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_VI
CRM Gain: $ -5.5 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_LI
CRM Gain: $ -5.54 Win %: 12.00 in 8 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_QP
CRM Gain: $ 0.32 Win %: 62.00 in 8 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_HM
CRM Gain: $ 2.57 Win %: 62.00 in 8 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_SS
CRM Gain: $ 2.5 Win %: 62.00 in 8 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_QL
CRM Gain: $ 3.01 Win %: 62.00 in 8 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_DB10
CRM Gain: $ 2.77 Win %: 62.00 in 8 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_AO
CRM Gain: $ 2.77 Win %: 62.00 in 8 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_AC
CRM Gain: $ 4.4 Win %: 87.00 in 8 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_IT
CRM Gain: $ -7.25 Win %: 25.00 in 8 days with algo TB3_HI_QM_OB1_OS1_CB4_CS4_TR_QP_DB10
CRM Gain: $ -3.68 Win %: 62.00 in 8 days with algo TB3_HI_QM_OB1_OS1_CB4_CS4_RV_TR_DB10
CRM Gain: $ 3.6 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB1_OS1_CB4_CS4_RV_AV_DB10
CRM Gain: $ -3.32 Win %: 37.00 in 8 days with algo TB3_HI_QM_OB1_OS1_CB4_CS4_RV_AL_DB10
CRM Gain: $ -3.7 Win %: 25.00 in 8 days with algo TB3_HI_QM_OB1_OS1_CB4_CS4_RV_QP_DB10
CRM Gain: $ -5.8 Win %: 62.00 in 8 days with algo TB3_HI_QM_OB1_OS1_CB4_CS4_HM_TR_DB10
CRM Gain: $ 0.74 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB1_OS1_CB4_CS4_HM_AV_DB10
CRM Gain: $ -5.92 Win %: 25.00 in 8 days with algo TB3_HI_QM_OB1_OS1_CB4_CS4_HM_QP_DB10
CRM Gain: $ 4.16 Win %: 87.00 in 8 days with algo TB3_HI_QM_OB1_OS1_CB4_CS4_IT_QL_DB10
CRM Gain: $ 0.03 Win %: 87.00 in 8 days with algo TB3_HI_QM_OB1_OS1_CB4_CS4_IT_QP_DB10
CRM Gain: $ -7.88 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB1_OS1_CB4_CS4_TR_IR3
CRM Gain: $ -8.22 Win %: 25.00 in 8 days with algo TB3_HI_QM_OB1_OS1_CB4_CS4_TR_QP
CRM Gain: $ -9.23 Win %: 37.00 in 8 days with algo TB3_HI_QM_OB1_OS1_CB4_CS4_QP_IR3
CRM Gain: $ -3.62 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB1_OS1_CB4_CS4_RV_TR
CRM Gain: $ 3.99 Win %: 62.00 in 8 days with algo TB3_HI_QM_OB1_OS1_CB4_CS4_RV_AV
CRM Gain: $ -1.89 Win %: 37.00 in 8 days with algo TB3_HI_QM_OB1_OS1_CB4_CS4_RV_AL
CRM Gain: $ -0.86 Win %: 25.00 in 8 days with algo TB3_HI_QM_OB1_OS1_CB4_CS4_RV_QP
CRM Gain: $ -6.41 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB1_OS1_CB4_CS4_HM_TR
CRM Gain: $ -9.86 Win %: 37.00 in 8 days with algo TB3_HI_QM_OB1_OS1_CB4_CS4_HM_AV
CRM Gain: $ -5.93 Win %: 12.00 in 8 days with algo TB3_HI_QM_OB1_OS1_CB4_CS4_HM_QP
CRM Gain: $ 4.13 Win %: 87.00 in 8 days with algo TB3_HI_QM_OB1_OS1_CB4_CS4_IT_QL
CRM Gain: $ 3.57 Win %: 100.00 in 8 days with algo TB3_HI_QM_OB1_OS1_CB4_CS4_IT_QP
CRM Gain: $ 2.77 Win %: 62.00 in 8 days with algo TB3_HI_QM_OB1_OS1_CB4_CS4_AO_AC
CRM Gain: $ 7.12 Win %: 75.00 in 8 days with algo TB3_HI_QM_OB1_OS1_CB4_CS4_RV
CRM Gain: $ -12.66 Win %: 25.00 in 8 days with algo TB3_HI_QM_OB1_OS1_CB4_CS4_IR3
CRM Gain: $ -4.81 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB1_OS1_CB4_CS4_TR
CRM Gain: $ -6.22 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB1_OS1_CB4_CS4_AV
CRM Gain: $ -3.02 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB1_OS1_CB4_CS4_AL
CRM Gain: $ -1.25 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB1_OS1_CB4_CS4_VI
CRM Gain: $ -5.5 Win %: 50.00 in 8 days with algo TB3_HI_QM_OB1_OS1_CB4_CS4_LI
CRM Gain: $ -5.54 Win %: 12.00 in 8 days with algo TB3_HI_QM_OB1_OS1_CB4_CS4_QP
CRM Gain: $ 0.32 Win %: 62.00 in 8 days with algo TB3_HI_QM_OB1_OS1_CB4_CS4_HM
CRM Gain: $ 2.57 Win %: 62.00 in 8 days with algo TB3_HI_QM_OB1_OS1_CB4_CS4_SS
CRM Gain: $ 2.5 Win %: 62.00 in 8 days with algo TB3_HI_QM_OB1_OS1_CB4_CS4_QL
CRM Gain: $ 3.01 Win %: 62.00 in 8 days with algo TB3_HI_QM_OB1_OS1_CB4_CS4_DB10
CRM Gain: $ 2.77 Win %: 62.00 in 8 days with algo TB3_HI_QM_OB1_OS1_CB4_CS4_AO
CRM Gain: $ 2.77 Win %: 62.00 in 8 days with algo TB3_HI_QM_OB1_OS1_CB4_CS4_AC
CRM Gain: $ 4.4 Win %: 87.00 in 8 days with algo TB3_HI_QM_OB1_OS1_CB4_CS4_IT
CRM Gain: $ 7.83 Win %: 55.00 in 9 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4
CRM Gain: $ -3.54 Win %: 44.00 in 9 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_TR_QP_DB10
CRM Gain: $ 1.08 Win %: 77.00 in 9 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_RV_TR_DB10
CRM Gain: $ 5.57 Win %: 66.00 in 9 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_RV_AV_DB10
CRM Gain: $ 5.03 Win %: 44.00 in 9 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_RV_AL_DB10
CRM Gain: $ 5.44 Win %: 77.00 in 9 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_RV_QP_DB10
CRM Gain: $ -0.98 Win %: 66.00 in 9 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_HM_TR_DB10
CRM Gain: $ 3.9 Win %: 66.00 in 9 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_HM_AV_DB10
CRM Gain: $ 2.19 Win %: 66.00 in 9 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_HM_QP_DB10
CRM Gain: $ 2.47 Win %: 55.00 in 9 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_IT_QL_DB10
CRM Gain: $ 0.54 Win %: 55.00 in 9 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_IT_QP_DB10
CRM Gain: $ -7.26 Win %: 33.00 in 9 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_TR_IR3
CRM Gain: $ -4.21 Win %: 44.00 in 9 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_TR_QP
CRM Gain: $ -15.66 Win %: 11.00 in 9 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_QP_IR3
CRM Gain: $ 2.18 Win %: 66.00 in 9 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_RV_TR
CRM Gain: $ -1.98 Win %: 55.00 in 9 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_RV_AV
CRM Gain: $ 2.96 Win %: 55.00 in 9 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_RV_AL
CRM Gain: $ 4.84 Win %: 66.00 in 9 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_RV_QP
CRM Gain: $ -0.89 Win %: 55.00 in 9 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_HM_TR
CRM Gain: $ -5.1 Win %: 44.00 in 9 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_HM_AV
CRM Gain: $ 0.45 Win %: 44.00 in 9 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_HM_AL
CRM Gain: $ 0.29 Win %: 55.00 in 9 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_HM_QP
CRM Gain: $ 0.8 Win %: 33.00 in 9 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_IT_QL
CRM Gain: $ 1.76 Win %: 66.00 in 9 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_IT_QP
CRM Gain: $ 7.83 Win %: 55.00 in 9 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_AO_AC
CRM Gain: $ 4.97 Win %: 77.00 in 9 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_QP_PM
CRM Gain: $ 9.93 Win %: 77.00 in 9 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_RV
CRM Gain: $ -7.75 Win %: 33.00 in 9 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_IR3
CRM Gain: $ 1.33 Win %: 55.00 in 9 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_TR
CRM Gain: $ -2.22 Win %: 55.00 in 9 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_AV
CRM Gain: $ 2.32 Win %: 44.00 in 9 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_AL
CRM Gain: $ 5.02 Win %: 55.00 in 9 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_VI
CRM Gain: $ 3.59 Win %: 55.00 in 9 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_LI
CRM Gain: $ 2.88 Win %: 55.00 in 9 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_QP
CRM Gain: $ 5.1 Win %: 55.00 in 9 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_HM
CRM Gain: $ 12.54 Win %: 66.00 in 9 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_SS
CRM Gain: $ 7.83 Win %: 55.00 in 9 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_QL
CRM Gain: $ 11.1 Win %: 66.00 in 9 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_DB10
CRM Gain: $ 7.83 Win %: 55.00 in 9 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_AO
CRM Gain: $ 7.83 Win %: 55.00 in 9 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_AC
CRM Gain: $ 0.8 Win %: 33.00 in 9 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_IT
CRM Gain: $ 6.77 Win %: 66.00 in 9 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_PM
CRM Gain: $ -0.66 Win %: 44.00 in 9 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_TR_QP_DB8
CRM Gain: $ 2.23 Win %: 33.00 in 9 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_RV_TR_DB8
CRM Gain: $ -15.72 Win %: 11.00 in 9 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_RV_AV_DB8
CRM Gain: $ -3.55 Win %: 44.00 in 9 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_RV_AL_DB8
CRM Gain: $ 1.72 Win %: 66.00 in 9 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_RV_QP_DB8
CRM Gain: $ -2.51 Win %: 22.00 in 9 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_HM_TR_DB8
CRM Gain: $ -17.78 Win %: 11.00 in 9 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_HM_AV_DB8
CRM Gain: $ 0.54 Win %: 55.00 in 9 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_HM_QP_DB8
CRM Gain: $ -0.58 Win %: 33.00 in 9 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_IT_QL_DB8
CRM Gain: $ -2.48 Win %: 33.00 in 9 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_IT_QP_DB8
CRM Gain: $ -1.36 Win %: 55.00 in 9 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_TR_IR2
CRM Gain: $ -1.45 Win %: 44.00 in 9 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_TR_QP
CRM Gain: $ 0.3 Win %: 77.00 in 9 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_QP_IR2
CRM Gain: $ 2.26 Win %: 44.00 in 9 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_RV_TR
CRM Gain: $ -13.85 Win %: 33.00 in 9 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_RV_AV
CRM Gain: $ -11.19 Win %: 22.00 in 9 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_RV_AL
CRM Gain: $ 1.87 Win %: 66.00 in 9 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_RV_QP
CRM Gain: $ -3.62 Win %: 33.00 in 9 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_HM_TR
CRM Gain: $ -10.63 Win %: 33.00 in 9 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_HM_AV
CRM Gain: $ -18.82 Win %: 22.00 in 9 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_HM_AL
CRM Gain: $ -3.65 Win %: 44.00 in 9 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_HM_QP
CRM Gain: $ -0.97 Win %: 11.00 in 9 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_IT_QL
CRM Gain: $ 3.3 Win %: 77.00 in 9 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_IT_QP
CRM Gain: $ 6.14 Win %: 66.00 in 9 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_AO_AC
CRM Gain: $ -0.53 Win %: 55.00 in 9 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_QP_PM
CRM Gain: $ 5.76 Win %: 66.00 in 9 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_RV
CRM Gain: $ -9.55 Win %: 44.00 in 9 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_IR2
CRM Gain: $ 0.1 Win %: 33.00 in 9 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_TR
CRM Gain: $ -10.73 Win %: 55.00 in 9 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_AV
CRM Gain: $ -20.81 Win %: 11.00 in 9 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_AL
CRM Gain: $ -2.64 Win %: 33.00 in 9 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_VI
CRM Gain: $ -4.91 Win %: 22.00 in 9 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_LI
CRM Gain: $ 3.33 Win %: 66.00 in 9 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_QP
CRM Gain: $ 5.08 Win %: 66.00 in 9 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_HM
CRM Gain: $ 14.82 Win %: 88.00 in 9 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_SS
CRM Gain: $ 6.33 Win %: 66.00 in 9 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_QL
CRM Gain: $ 7.72 Win %: 66.00 in 9 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_DB8
CRM Gain: $ 6.14 Win %: 66.00 in 9 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_AO
CRM Gain: $ 6.14 Win %: 66.00 in 9 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_AC
CRM Gain: $ -0.97 Win %: 11.00 in 9 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_IT
CRM Gain: $ -0.74 Win %: 55.00 in 9 days with algo TB4_EO_EC_QM_OB3_OS3_CB3_CS3_PM
CRM Gain: $ -8.41 Win %: 22.00 in 9 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_TR_QP_DB10
CRM Gain: $ -7.29 Win %: 55.00 in 9 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_RV_TR_DB10
CRM Gain: $ 3.65 Win %: 55.00 in 9 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_RV_AV_DB10
CRM Gain: $ -1.36 Win %: 44.00 in 9 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_RV_AL_DB10
CRM Gain: $ -1.92 Win %: 33.00 in 9 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_RV_QP_DB10
CRM Gain: $ -6.11 Win %: 55.00 in 9 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_HM_TR_DB10
CRM Gain: $ -1.99 Win %: 44.00 in 9 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_HM_AV_DB10
CRM Gain: $ -1.87 Win %: 44.00 in 9 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_HM_QP_DB10
CRM Gain: $ -5.15 Win %: 33.00 in 9 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_IT_QL_DB10
CRM Gain: $ -5.52 Win %: 33.00 in 9 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_IT_QP_DB10
CRM Gain: $ -24.99 Win %: 44.00 in 9 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_TR_IR3
CRM Gain: $ -6.53 Win %: 33.00 in 9 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_TR_QP
CRM Gain: $ -11.8 Win %: 33.00 in 9 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_QP_IR3
CRM Gain: $ -3.94 Win %: 44.00 in 9 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_RV_TR
CRM Gain: $ -3.89 Win %: 55.00 in 9 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_RV_AV
CRM Gain: $ -14.31 Win %: 44.00 in 9 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_RV_AL
CRM Gain: $ 2.42 Win %: 33.00 in 9 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_RV_QP
CRM Gain: $ -2.53 Win %: 55.00 in 9 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_HM_TR
CRM Gain: $ -7.41 Win %: 44.00 in 9 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_HM_AV
CRM Gain: $ -5.58 Win %: 44.00 in 9 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_HM_AL
CRM Gain: $ -2.65 Win %: 22.00 in 9 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_HM_QP
CRM Gain: $ -1.78 Win %: 22.00 in 9 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_IT_QL
CRM Gain: $ 1.69 Win %: 66.00 in 9 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_IT_QP
CRM Gain: $ 4.58 Win %: 66.00 in 9 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_AO_AC
CRM Gain: $ 3.69 Win %: 44.00 in 9 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_QP_PM
CRM Gain: $ 5.65 Win %: 66.00 in 9 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_RV
CRM Gain: $ -8.77 Win %: 33.00 in 9 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_IR3
CRM Gain: $ -1.65 Win %: 55.00 in 9 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_TR
CRM Gain: $ -3.77 Win %: 55.00 in 9 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_AV
CRM Gain: $ 4.14 Win %: 55.00 in 9 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_AL
CRM Gain: $ 1.81 Win %: 55.00 in 9 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_VI
CRM Gain: $ -2.01 Win %: 55.00 in 9 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_LI
CRM Gain: $ -3.85 Win %: 22.00 in 9 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_QP
CRM Gain: $ 3.38 Win %: 66.00 in 9 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_HM
CRM Gain: $ 8.74 Win %: 66.00 in 9 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_SS
CRM Gain: $ 1.77 Win %: 55.00 in 9 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_QL
CRM Gain: $ 6.41 Win %: 66.00 in 9 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_DB10
CRM Gain: $ 3.3 Win %: 66.00 in 9 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_AO
CRM Gain: $ 4.36 Win %: 66.00 in 9 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_AC
CRM Gain: $ -3.25 Win %: 22.00 in 9 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_IT
CRM Gain: $ 5.49 Win %: 55.00 in 9 days with algo TB3_HI_QM_OB2_OS2_CB4_CS4_PM
CRM Gain: $ -4.72 Win %: 66.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_TR_QP_DB30
CRM Gain: $ -2.22 Win %: 33.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_RV_TR_DB30
CRM Gain: $ -1.64 Win %: 44.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_RV_AV_DB30
CRM Gain: $ 4.06 Win %: 66.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_RV_AL_DB30
CRM Gain: $ -2.66 Win %: 22.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_RV_QP_DB30
CRM Gain: $ -5.32 Win %: 55.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_HM_TR_DB30
CRM Gain: $ -0.18 Win %: 55.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_HM_AV_DB30
CRM Gain: $ -14.22 Win %: 44.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_HM_QP_DB30
CRM Gain: $ -1.01 Win %: 44.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_IT_QL_DB30
CRM Gain: $ -1 Win %: 55.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_IT_QP_DB30
CRM Gain: $ 0.45 Win %: 33.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_TR_IR5
CRM Gain: $ -4 Win %: 55.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_TR_QP
CRM Gain: $ -0.21 Win %: 55.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_QP_IR5
CRM Gain: $ 4.68 Win %: 44.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_RV_TR
CRM Gain: $ -11.3 Win %: 22.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_RV_AV
CRM Gain: $ 4.15 Win %: 55.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_RV_AL
CRM Gain: $ 2 Win %: 44.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_RV_QP
CRM Gain: $ -1.78 Win %: 66.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_HM_TR
CRM Gain: $ -4.01 Win %: 33.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_HM_AV
CRM Gain: $ -5.76 Win %: 44.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_HM_AL
CRM Gain: $ -2.79 Win %: 55.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_HM_QP
CRM Gain: $ 2.18 Win %: 55.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_IT_QL
CRM Gain: $ 3.45 Win %: 88.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_IT_QP
CRM Gain: $ -16.06 Win %: 33.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_AO_AC
CRM Gain: $ -4.13 Win %: 44.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_QP_PM
CRM Gain: $ -1.18 Win %: 33.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_RV
CRM Gain: $ -5.28 Win %: 66.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_IR5
CRM Gain: $ 5.17 Win %: 66.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_TR
CRM Gain: $ -10.21 Win %: 33.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_AV
CRM Gain: $ 8 Win %: 55.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_AL
CRM Gain: $ -1.07 Win %: 55.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_VI
CRM Gain: $ 6.51 Win %: 66.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_LI
CRM Gain: $ -5.96 Win %: 66.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_QP
CRM Gain: $ -16.45 Win %: 44.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_HM
CRM Gain: $ -17.91 Win %: 44.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_SS
CRM Gain: $ 9.01 Win %: 77.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_QL
CRM Gain: $ -6.69 Win %: 55.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_DB30
CRM Gain: $ 3.13 Win %: 55.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_AO
CRM Gain: $ -25.47 Win %: 66.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_AC
CRM Gain: $ 0.55 Win %: 44.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_IT
CRM Gain: $ -3.62 Win %: 22.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_PM
CRM Gain: $ 3.09 Win %: 80.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5
CRM Gain: $ -2.67 Win %: 70.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_TR_QP_DB30
CRM Gain: $ -2.46 Win %: 40.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_RV_TR_DB30
CRM Gain: $ -0.26 Win %: 50.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_RV_AV_DB30
CRM Gain: $ 5.79 Win %: 70.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_RV_AL_DB30
CRM Gain: $ -3.99 Win %: 30.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_RV_QP_DB30
CRM Gain: $ -2.85 Win %: 60.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_HM_TR_DB30
CRM Gain: $ -1.16 Win %: 60.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_HM_AV_DB30
CRM Gain: $ -3.68 Win %: 60.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_HM_QP_DB30
CRM Gain: $ 5.2 Win %: 60.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_IT_QL_DB30
CRM Gain: $ 1.52 Win %: 70.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_IT_QP_DB30
CRM Gain: $ -5.62 Win %: 40.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_TR_IR5
CRM Gain: $ 3.42 Win %: 70.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_TR_QP
CRM Gain: $ -0.97 Win %: 60.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_QP_IR5
CRM Gain: $ 2.85 Win %: 50.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_RV_TR
CRM Gain: $ -4.55 Win %: 40.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_RV_AV
CRM Gain: $ 4.54 Win %: 60.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_RV_AL
CRM Gain: $ 1.67 Win %: 50.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_RV_QP
CRM Gain: $ 0.18 Win %: 70.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_HM_TR
CRM Gain: $ -9.13 Win %: 40.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_HM_AV
CRM Gain: $ -2.67 Win %: 50.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_HM_AL
CRM Gain: $ -4.32 Win %: 60.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_HM_QP
CRM Gain: $ 5.26 Win %: 60.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_IT_QL
CRM Gain: $ 3.35 Win %: 90.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_IT_QP
CRM Gain: $ -14.96 Win %: 40.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_AO_AC
CRM Gain: $ -0.28 Win %: 60.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_QP_PM
CRM Gain: $ 4.21 Win %: 50.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_RV
CRM Gain: $ -1.63 Win %: 70.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_IR5
CRM Gain: $ -0.9 Win %: 70.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_TR
CRM Gain: $ -3.92 Win %: 50.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_AV
CRM Gain: $ -0.51 Win %: 50.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_AL
CRM Gain: $ -0.14 Win %: 60.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_VI
CRM Gain: $ 2.78 Win %: 70.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_LI
CRM Gain: $ 1.76 Win %: 80.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_QP
CRM Gain: $ -4.71 Win %: 60.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_HM
CRM Gain: $ -14.34 Win %: 50.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_SS
CRM Gain: $ 6.11 Win %: 80.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_QL
CRM Gain: $ -0.21 Win %: 70.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_DB30
CRM Gain: $ -2.14 Win %: 60.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_AO
CRM Gain: $ -2.9 Win %: 80.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_AC
CRM Gain: $ 5.26 Win %: 60.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_IT
CRM Gain: $ -2.35 Win %: 30.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_PM
CRM Gain: $ -1.71 Win %: 50.00 in 10 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_TR_QP_DB10
CRM Gain: $ -0.38 Win %: 80.00 in 10 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_RV_TR_DB10
CRM Gain: $ 0.42 Win %: 60.00 in 10 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_RV_AV_DB10
CRM Gain: $ 0.07 Win %: 50.00 in 10 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_RV_AL_DB10
CRM Gain: $ 5.25 Win %: 80.00 in 10 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_RV_QP_DB10
CRM Gain: $ -0.09 Win %: 70.00 in 10 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_HM_TR_DB10
CRM Gain: $ 7.1 Win %: 70.00 in 10 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_HM_AV_DB10
CRM Gain: $ 1.43 Win %: 70.00 in 10 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_HM_QP_DB10
CRM Gain: $ 2.77 Win %: 60.00 in 10 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_IT_QL_DB10
CRM Gain: $ 0.63 Win %: 60.00 in 10 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_IT_QP_DB10
CRM Gain: $ -7.4 Win %: 40.00 in 10 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_TR_IR3
CRM Gain: $ -5.73 Win %: 50.00 in 10 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_TR_QP
CRM Gain: $ -10.06 Win %: 30.00 in 10 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_QP_IR3
CRM Gain: $ -3.11 Win %: 60.00 in 10 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_RV_TR
CRM Gain: $ -12.66 Win %: 50.00 in 10 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_RV_AV
CRM Gain: $ -5.39 Win %: 50.00 in 10 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_RV_AL
CRM Gain: $ 4.86 Win %: 70.00 in 10 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_RV_QP
CRM Gain: $ -4.97 Win %: 50.00 in 10 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_HM_TR
CRM Gain: $ -7.46 Win %: 40.00 in 10 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_HM_AV
CRM Gain: $ -7.75 Win %: 40.00 in 10 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_HM_AL
CRM Gain: $ -0.21 Win %: 60.00 in 10 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_HM_QP
CRM Gain: $ -4.82 Win %: 30.00 in 10 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_IT_QL
CRM Gain: $ -1.09 Win %: 60.00 in 10 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_IT_QP
CRM Gain: $ 1.01 Win %: 50.00 in 10 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_AO_AC
CRM Gain: $ 3.92 Win %: 80.00 in 10 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_QP_PM
CRM Gain: $ 9.98 Win %: 80.00 in 10 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_RV
CRM Gain: $ -6.88 Win %: 40.00 in 10 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_IR3
CRM Gain: $ -3.74 Win %: 50.00 in 10 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_TR
CRM Gain: $ -12.9 Win %: 50.00 in 10 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_AV
CRM Gain: $ -5.8 Win %: 40.00 in 10 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_AL
CRM Gain: $ 1.32 Win %: 50.00 in 10 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_VI
CRM Gain: $ 1.17 Win %: 60.00 in 10 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_LI
CRM Gain: $ 2.2 Win %: 60.00 in 10 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_QP
CRM Gain: $ 5.33 Win %: 60.00 in 10 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_HM
CRM Gain: $ 9.43 Win %: 70.00 in 10 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_SS
CRM Gain: $ 7.83 Win %: 60.00 in 10 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_QL
CRM Gain: $ 8.67 Win %: 70.00 in 10 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_DB10
CRM Gain: $ 7.83 Win %: 60.00 in 10 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_AO
CRM Gain: $ 7.83 Win %: 60.00 in 10 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_AC
CRM Gain: $ -4.82 Win %: 30.00 in 10 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_IT
CRM Gain: $ 6.19 Win %: 70.00 in 10 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_PM
CRM Gain: $ -2.38 Win %: 30.00 in 10 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_TR_QP_DB8
CRM Gain: $ -2.56 Win %: 40.00 in 10 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_RV_TR_DB8
CRM Gain: $ -13 Win %: 30.00 in 10 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_RV_AV_DB8
CRM Gain: $ -6.02 Win %: 50.00 in 10 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_RV_AL_DB8
CRM Gain: $ -0.09 Win %: 70.00 in 10 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_RV_QP_DB8
CRM Gain: $ -0.38 Win %: 40.00 in 10 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_HM_TR_DB8
CRM Gain: $ -12.2 Win %: 30.00 in 10 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_HM_AV_DB8
CRM Gain: $ 3.73 Win %: 70.00 in 10 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_HM_QP_DB8
CRM Gain: $ 3.32 Win %: 40.00 in 10 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_IT_QL_DB8
CRM Gain: $ -0.55 Win %: 50.00 in 10 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_IT_QP_DB8
CRM Gain: $ -7.2 Win %: 30.00 in 10 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_TR_IR2
CRM Gain: $ -9.46 Win %: 30.00 in 10 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_TR_QP
CRM Gain: $ -23.44 Win %: 10.00 in 10 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_QP_IR2
CRM Gain: $ -6.57 Win %: 30.00 in 10 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_RV_TR
CRM Gain: $ -11.01 Win %: 50.00 in 10 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_RV_AV
CRM Gain: $ -9.34 Win %: 30.00 in 10 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_RV_AL
CRM Gain: $ -2.66 Win %: 60.00 in 10 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_RV_QP
CRM Gain: $ -7 Win %: 30.00 in 10 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_HM_TR
CRM Gain: $ -7.61 Win %: 50.00 in 10 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_HM_AV
CRM Gain: $ -7.59 Win %: 30.00 in 10 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_HM_AL
CRM Gain: $ -2.01 Win %: 60.00 in 10 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_HM_QP
CRM Gain: $ -1.51 Win %: 20.00 in 10 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_IT_QL
CRM Gain: $ -0.75 Win %: 60.00 in 10 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_IT_QP
CRM Gain: $ 2.42 Win %: 70.00 in 10 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_AO_AC
CRM Gain: $ -2.77 Win %: 60.00 in 10 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_QP_PM
CRM Gain: $ 2.45 Win %: 60.00 in 10 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_RV
CRM Gain: $ -17.98 Win %: 20.00 in 10 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_IR2
CRM Gain: $ -5.37 Win %: 30.00 in 10 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_TR
CRM Gain: $ -10.43 Win %: 50.00 in 10 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_AV
CRM Gain: $ -7.89 Win %: 40.00 in 10 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_AL
CRM Gain: $ -7.38 Win %: 40.00 in 10 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_VI
CRM Gain: $ -8.34 Win %: 30.00 in 10 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_LI
CRM Gain: $ -2.12 Win %: 60.00 in 10 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_QP
CRM Gain: $ 2.32 Win %: 70.00 in 10 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_HM
CRM Gain: $ 8.91 Win %: 70.00 in 10 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_SS
CRM Gain: $ -2.38 Win %: 60.00 in 10 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_QL
CRM Gain: $ 9.34 Win %: 70.00 in 10 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_DB8
CRM Gain: $ 2.42 Win %: 70.00 in 10 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_AO
CRM Gain: $ 2.42 Win %: 70.00 in 10 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_AC
CRM Gain: $ -1.51 Win %: 20.00 in 10 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_IT
CRM Gain: $ -0.61 Win %: 60.00 in 10 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_PM
CRM Gain: $ -5.97 Win %: 40.00 in 10 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_TR_QP_DB30
CRM Gain: $ -8.5 Win %: 30.00 in 10 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_RV_TR_DB30
CRM Gain: $ -8.21 Win %: 30.00 in 10 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_RV_AV_DB30
CRM Gain: $ -4.33 Win %: 20.00 in 10 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_RV_AL_DB30
CRM Gain: $ -7.46 Win %: 30.00 in 10 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_RV_QP_DB30
CRM Gain: $ -1.86 Win %: 40.00 in 10 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_HM_TR_DB30
CRM Gain: $ 1.4 Win %: 40.00 in 10 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_HM_AV_DB30
CRM Gain: $ -2.59 Win %: 20.00 in 10 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_HM_QP_DB30
CRM Gain: $ -2.43 Win %: 20.00 in 10 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_IT_QL_DB30
CRM Gain: $ -2.96 Win %: 20.00 in 10 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_IT_QP_DB30
CRM Gain: $ -5.03 Win %: 30.00 in 10 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_TR_IR5
CRM Gain: $ -4.67 Win %: 40.00 in 10 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_TR_QP
CRM Gain: $ -4.69 Win %: 20.00 in 10 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_QP_IR5
CRM Gain: $ -10.83 Win %: 40.00 in 10 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_RV_TR
CRM Gain: $ -8.95 Win %: 30.00 in 10 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_RV_AV
CRM Gain: $ -6.45 Win %: 30.00 in 10 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_RV_AL
CRM Gain: $ -7.89 Win %: 40.00 in 10 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_RV_QP
CRM Gain: $ -2.56 Win %: 40.00 in 10 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_HM_TR
CRM Gain: $ 1.12 Win %: 40.00 in 10 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_HM_AV
CRM Gain: $ -0.2 Win %: 50.00 in 10 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_HM_AL
CRM Gain: $ -1.68 Win %: 30.00 in 10 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_HM_QP
CRM Gain: $ -0.78 Win %: 40.00 in 10 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_IT_QL
CRM Gain: $ -1.12 Win %: 40.00 in 10 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_IT_QP
CRM Gain: $ -2.13 Win %: 30.00 in 10 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_AO_AC
CRM Gain: $ 1.08 Win %: 60.00 in 10 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_QP_PM
CRM Gain: $ -5.49 Win %: 40.00 in 10 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_RV
CRM Gain: $ -5.02 Win %: 20.00 in 10 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_IR5
CRM Gain: $ -4.27 Win %: 40.00 in 10 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_TR
CRM Gain: $ -3.29 Win %: 30.00 in 10 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_AV
CRM Gain: $ -1.38 Win %: 50.00 in 10 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_AL
CRM Gain: $ 1.88 Win %: 70.00 in 10 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_VI
CRM Gain: $ -0.61 Win %: 40.00 in 10 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_LI
CRM Gain: $ -1.51 Win %: 30.00 in 10 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_QP
CRM Gain: $ -0.93 Win %: 30.00 in 10 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_HM
CRM Gain: $ 2.9 Win %: 60.00 in 10 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_SS
CRM Gain: $ 0.46 Win %: 30.00 in 10 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_QL
CRM Gain: $ -1.2 Win %: 20.00 in 10 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_DB30
CRM Gain: $ -1.7 Win %: 40.00 in 10 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_AO
CRM Gain: $ 1.86 Win %: 50.00 in 10 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_AC
CRM Gain: $ -0.78 Win %: 40.00 in 10 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_IT
CRM Gain: $ 1.46 Win %: 60.00 in 10 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_PM
CRM Gain: $ 9.54 Win %: 80.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5
CRM Gain: $ 5.18 Win %: 80.00 in 10 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_TS
CRM Gain: $ 10.28 Win %: 60.00 in 10 days with algo TB3_HI_QM_OB4_OS4_CB4_CS4_TS
CRM Gain: $ 4.5 Win %: 70.00 in 10 days with algo TB4_HS_QM_OB1_OS1_CB3_CS3_TS
CRM Gain: $ 0.56 Win %: 30.00 in 10 days with algo TB1_HL_HS_QM_OB5_OS5_CB2_CS2_TS
